--- a/app/public/css/layout.styl
+++ b/app/public/css/layout.styl
@@ -61,3 +61,29 @@ Examples of Layout Styles:
 
 hr.tight
 	margin 18px 0 0
+
+.page-container
+	position fixed
+	background #eee
+	top header_height
+	bottom footer_height
+	width 100%
+
+.page-container .heading
+	raiseText()
+	font-size 1.4em
+	padding 20px 0 0 0
+
+.center-container
+	width 940px
+	height 100%
+	margin auto
+	text-align center
+	padding 0 20px 0 20px
+
+.footer
+	position fixed
+	height footer_height
+	bottom 0
+	width 100%
+	background #222;
