--- a/app/public/css/mixins.styl
+++ b/app/public/css/mixins.styl
@@ -17,6 +17,9 @@ Github: https://github.com/visionmedia/nib
 
 */
 
+header_height = 40px
+footer_height = 20px
+
 raiseText()
 	color grey
 	text-shadow: -1px 1px 0 white
