--- a/app/public/css/base.css
+++ b/app/public/css/base.css
@@ -1,4 +1,6 @@
+html,body{margin:0;padding:0;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
 body{background:url("../img/bkgd/60degree_gray.png") #e7e7e7 repeat;font-family:Arial,Helvetica,sans-serif}
 h2{font-size:21px;color:#6b6b6b;text-shadow:0 1px 1px #fff}
 a{cursor:pointer}
 a:hover{text-decoration:none}
+label,.subheading{color:#808080;text-shadow:-1px 1px 0 #fff;-moz-text-shadow:-1px 1px 0 #fff;-webkit-text-shadow:-1px 1px 0 #fff}
