--- a/app/server/views/dashboard-1.jade
+++ b/app/server/views/dashboard-1.jade
@@ -1,7 +1,8 @@
 div.navbar.navbar-fixed-top
 	div.navbar-inner
 		div.container
-			a.brand(href="#") BRIDGE
+			a.brand(href="#")
+				img(src="../img/logo.png", alt="Bridge")
 			ul.nav
 				li.divider-vertical
 			ul.nav.pull-right
