--- a/app/public/css/layout.styl
+++ b/app/public/css/layout.styl
@@ -30,6 +30,9 @@ Examples of Layout Styles:
 @import 'mixins'
 @import 'nib'
 
+/*
+Override some Bootstrap defaults...
+*/
 .container, .navbar-fixed-top .container
 	width 960px
 
@@ -38,6 +41,9 @@ Examples of Layout Styles:
 
 .navbar + .container
 	margin-top 40px
+
+.navbar .nav > li
+	padding-top 8px
 
 .services-wrapper
 	margin-top 60px
