--- a/app/public/css/pages.styl
+++ b/app/public/css/pages.styl
@@ -24,6 +24,8 @@ Page styles are specific to certain areas of the site. For instance if you want 
 #dashboard .service
 	float left
 	margin-right 10px
+	width 220px
+	height 156px
 #dashboard .service .text
 	margin 0 10px 0 10px
 #dashboard .service .text .name
@@ -33,7 +35,11 @@ Page styles are specific to certain areas of the site. For instance if you want 
 #dashboard .img
 	width 160px
 	height 100px
-	background-color #eee
+	position absolute
+	top 50%
+	margin-top -50px
+	left 50%
+	margin-left -80px
 	border-radius 5px
 	-moz-border-radius 5px
 	-webkit-border-radius 5px
@@ -124,7 +130,7 @@ Page styles are specific to certain areas of the site. For instance if you want 
 
 #inventory .service
 	width 100px
-	height 128px
+	height 140px
 	margin auto
 	margin-bottom 10px
 	padding 10px 20px 6px 20px
