--- a/app/public/css/modules.css
+++ b/app/public/css/modules.css
@@ -18,8 +18,9 @@
 .service-progress{float:left;position:relative;height:124px;width:58px;-webkit-box-shadow:inset 1px 0 0 #f0f0f0;box-shadow:inset 1px 0 0 #f0f0f0}
 .v-progress{width:15px;height:100px;overflow:hidden;margin:13px auto;-webkit-border-radius:10px;border-radius:10px;background:#f5f5f5;border:1px solid #c4c4c4;-webkit-box-shadow:-1px 0 #f0f0f0,inset -1px 0 rgba(0,0,0,0.1);box-shadow:-1px 0 #f0f0f0,inset -1px 0 rgba(0,0,0,0.1)}
 .v-progress-bar{width:15px;height:100%;margin-top:50px;background-color:#0e90d2;background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #5ac911), color-stop(1, #6ccc0b));background-image:-webkit-linear-gradient(top, #5ac911 0%, #6ccc0b 100%);background-image:-moz-linear-gradient(top, #5ac911 0%, #6ccc0b 100%);background-image:-o-linear-gradient(top, #5ac911 0%, #6ccc0b 100%);background-image:-ms-linear-gradient(top, #5ac911 0%, #6ccc0b 100%);background-image:linear-gradient(top, #5ac911 0%, #6ccc0b 100%);background-repeat:repeat-x;filter:progid:dximagetransform.microsoft.gradient(startColorstr="#5AC911",endColorstr="#6CCC0B",GradientType=0);-webkit-box-shadow:inset -1px -1px rgba(0,0,0,0.15),inset 1px 1px rgba(0,0,0,0.15),inset 2px 0 rgba(255,255,255,0.15);box-shadow:inset -1px -1px rgba(0,0,0,0.15),inset 1px 1px rgba(0,0,0,0.15),inset 2px 0 rgba(255,255,255,0.15);-webkit-transition:margin-top .6s ease;-moz-transition:margin-top .6s ease;-o-transition:margin-top .6s ease;-ms-transition:margin-top .6s ease;transition:margin-top .6s ease}
-#logged-in-user-name{top:11px;right:130px;text-align:right;position:absolute}
-.reservation{height:250px;margin-bottom:30px;background:#eee;-webkit-border-radius:10px;border-radius:10px;-webkit-box-shadow:inset 0 0 5px 3px #afafaf;box-shadow:inset 0 0 5px 3px #afafaf;overflow:hidden}
+#logged-in-user-name,/*  --------------------------------------------------
+    :: Reservations
+    -------------------------------------------------- */,.reservation{height:250px;margin-bottom:30px;background:#eee;-webkit-border-radius:10px;border-radius:10px;-webkit-box-shadow:inset 0 0 5px 3px #afafaf;box-shadow:inset 0 0 5px 3px #afafaf;overflow:hidden}
 .reservation-header{height:45px;color:#fff;font-size:16px;-webkit-border-radius:3px;border-radius:3px;border-bottom:1px solid #737373;background-image:-webkit-gradient(linear, left top, left bottom, color-stop(0, #5f5e5e), color-stop(1, #4b4a4a));background-image:-webkit-linear-gradient(top, #5f5e5e 0%, #4b4a4a 100%);background-image:-moz-linear-gradient(top, #5f5e5e 0%, #4b4a4a 100%);background-image:-o-linear-gradient(top, #5f5e5e 0%, #4b4a4a 100%);background-image:-ms-linear-gradient(top, #5f5e5e 0%, #4b4a4a 100%);background-image:linear-gradient(top, #5f5e5e 0%, #4b4a4a 100%);-webkit-box-shadow:inset 0 -1px #414141,inset 1px 1px #717070,inset -1px 0 #717070,0 1px 5px 1px #afafaf;box-shadow:inset 0 -1px #414141,inset 1px 1px #717070,inset -1px 0 #717070,0 1px 5px 1px #afafaf}
 .reservation-header > .reservation-info{padding-top:14px;padding-left:27px}
 .reservation-entries{padding-top:18px;padding-left:20px}
@@ -69,10 +70,13 @@ button i{padding-left:8px}
 .button-modal{min-width:200px;height:33px;font-size:20px;line-height:34px;letter-spacing:1px}
 .button-group > a{margin-left:20px}
 .button-group > a:first-child{margin:0}
-#btn-logout{width:100px;top:1px;right:8px;position:absolute}
+#btn-logout{width:100px}
 #btn-about{top:1px;right:175px;width:40px;position:absolute}
 #btn-about i{padding-left:0}
 #btn-sign-in{top:1px;right:8px;width:160px;position:absolute}
+.navbar .divider-vertical{height:47px}
+.navbar .nav > li > a,.navbar .nav > li > a:hover,.navbar .nav > li > #logged-in-user-name{color:#fff;font-size:18px;padding:9px 10px 11px}
+.navbar .nav > li > .brand{color:#d2d1d1}
 .username,.emphasize{color:#6eb6b5}
 .well button{width:60px}
 .well,.form-horizontal{margin:0}
@@ -80,5 +84,3 @@ button i{padding-left:8px}
 .group select{float:left;width:50px}
 .group .wide{width:70px}
 .group label{display:inline-block;margin:5px 15px 5px 5px}
-.navbar .divider-vertical{height:47px}
-.navbar .nav > li > a,.navbar .nav > li > a:hover{color:#fff;font-size:18px}
