--- a/app/server/views/home/header.jade
+++ b/app/server/views/home/header.jade
@@ -7,7 +7,8 @@ div.navbar.navbar-fixed-top
 	div.navbar-inner
 		div.container-fluid
 			ul#global-nav.nav.pull-left
-				.brand #{capitalize(oName)}
+				li
+					.brand #{capitalize(oName)}
 				li.divider-vertical
 				li
 					a(href='/about-us') About Us
@@ -21,9 +22,12 @@ div.navbar.navbar-fixed-top
 				li
 					a(href='/clients') Our Clients
 				li.divider-vertical
-			button#btn-logout.btn.btn-primary
-				i.icon-lock.icon-white
-				| Sign Out
-	#logged-in-user-name Welcome : #{capitalize(uName)}
+			ul.nav.pull-right
+				li
+					#logged-in-user-name Welcome : #{capitalize(uName)}
+				li
+					button#btn-logout.btn.btn-primary
+						i.icon-lock.icon-white
+						| Sign Out
 include ../modals/alert
 script(src='/js/utils/globals.js')
