--- a/app/public/css/pages.styl
+++ b/app/public/css/pages.styl
@@ -6,6 +6,14 @@ Page styles are specific to certain areas of the site. For instance if you want 
 
 // public dashboard //
 
+@import 'mixins'
+@import 'icons'
+
+/* 
+	!Note! Don't import nib into this file. These styles were created without nib and 
+	adding it will break this stylesheet!
+*/
+
 #dashboard
 	margin-top 60px
 #dashboard .org
