fixed a bug in our-team

--- a/app/server/views/home/our-team.jade
+++ b/app/server/views/home/our-team.jade
@@ -11,7 +11,7 @@ include header
 			.member.well
 				.image
 					img(src='./img/icons/user.png')
-				#{capitalize(team[i].name)}
+				div #{capitalize(team[i].name)}
 .footer
 
 script(src='/vendor/jquery.min.js')
