matched the look of dashboard home to offerings

--- a/app/public/css/pages.styl
+++ b/app/public/css/pages.styl
@@ -15,7 +15,8 @@ Page styles are specific to certain areas of the site. For instance if you want 
 */
 
 #dashboard
-	margin-top 60px
+	padding-top 40px
+	background #EAEAEA
 #dashboard .org
 	margin 20px
 	height 140px
@@ -32,27 +33,25 @@ Page styles are specific to certain areas of the site. For instance if you want 
 #dashboard .service
 	float left
 	margin-right 10px
-	width 220px
-	height 156px
+	color #777
+	width 180px
+	height 140px
+	padding 10px 20px 6px 20px
 #dashboard .service .text
 	margin 0 10px 0 10px
 #dashboard .service .text .name
 	float left
 #dashboard .service .text .avail
 	text-align right
+#dashboard .service hr
+	margin 5px 0 3px 0
 #dashboard .img
 	width 160px
 	height 100px
-	position absolute
-	top 50%
-	margin-top -50px
-	left 50%
-	margin-left -80px
+	margin-left 40px
 	border-radius 5px
 	-moz-border-radius 5px
 	-webkit-border-radius 5px
-#dashboard .img img
-	margin-left 30px
 
 // account login //
 
