--- a/app/public/css/pages.css
+++ b/app/public/css/pages.css
@@ -3,18 +3,18 @@
 		vertical-align: text-top;
 	}
 .icon-back-arrow{background:url("../img/icons/latest/icon-back-arrow.png") no-repeat top left;width:33px;height:21px}
-#dashboard{margin-top:60px}
+#dashboard{padding-top:40px;background:#eaeaea}
 #dashboard .org{margin:20px;height:140px}
 #dashboard p{font-size:18px;font-weight:bold}
 #dashboard .orgName{float:left;margin-right:10px}
 #dashboard .orgAddy{color:#27a3fa}
 #dashboard hr{clear:both}
-#dashboard .service{float:left;margin-right:10px;width:220px;height:156px}
+#dashboard .service{float:left;margin-right:10px;color:#777;width:180px;height:140px;padding:10px 20px 6px 20px}
 #dashboard .service .text{margin:0 10px 0 10px}
 #dashboard .service .text .name{float:left}
 #dashboard .service .text .avail{text-align:right}
-#dashboard .img{width:160px;height:100px;position:absolute;top:50%;margin-top:-50px;left:50%;margin-left:-80px;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}
-#dashboard .img img{margin-left:30px}
+#dashboard .service hr{margin:5px 0 3px 0}
+#dashboard .img{width:160px;height:100px;margin-left:40px;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}
 #login-container{width:340px;margin:160px auto;}
 #login-container label{margin:15px 0 5px 5px}
 #login-container button{width:150px;padding:6px 40px 6px 40px;float:left;margin-top:15px}
