--- a/app/server/views/dashboard-1.jade
+++ b/app/server/views/dashboard-1.jade
@@ -17,7 +17,7 @@ div.container
 		div.row
 			ul
 				li
-					div.service.is-selected
+					div.service.is-enabled.is-selected
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
 						div.service-chrome
 						div.service-header
@@ -28,7 +28,7 @@ div.container
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.service
+					div.service.is-enabled
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
 						div.service-chrome
 						div.service-header
@@ -39,7 +39,7 @@ div.container
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.service.is-selected
+					div.service.is-enabled.is-selected
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
 						div.service-chrome
 						div.service-header
@@ -50,7 +50,7 @@ div.container
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.service
+					div.service.is-enabled
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
 						div.service-chrome
 						div.service-header
@@ -61,7 +61,7 @@ div.container
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.service
+					div.service.is-enabled
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
 						div.service-chrome
 						div.service-header
@@ -72,7 +72,7 @@ div.container
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.service.is-selected
+					div.service.is-enabled.is-selected
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
 						div.service-chrome
 						div.service-header
@@ -83,7 +83,7 @@ div.container
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.service
+					div.service.is-enabled
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
 						div.service-chrome
 						div.service-header
@@ -94,7 +94,7 @@ div.container
 							div.v-progress
 								div.v-progress-bar
 				li
-					div.service
+					div.service.is-enabled
 						img.button-edit(src="../img/icons/latest/icon-edit.png")
 						div.service-chrome
 						div.service-header
