Add logout page

--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -419,6 +419,9 @@ button i
 .username, .emphasize
 	color #6EB6B5
 
+.caution
+	color #C12885
+
 .well button
 	width 60px
 .well, .form-horizontal
