--- a/app/server/views/home/header.jade
+++ b/app/server/views/home/header.jade
@@ -30,4 +30,5 @@ div.navbar.navbar-fixed-top
 						i.icon-lock.icon-white
 						| Sign Out
 include ../modals/alert
+include ../modals/logout
 script(src='/js/utils/globals.js')
