fixed caution style

--- a/app/server/views/modals/logout.jade
+++ b/app/server/views/modals/logout.jade
@@ -1,5 +1,5 @@
 .modal-logout.modal-centered.modal.hide.fade
 	.modal-header
 		h3 You have succesfully 
-			span.caution logged out
+			span.logged-out logged out
 	.modal-body Thank you for using Bridge!
