--- a/app/public/css/modules.css
+++ b/app/public/css/modules.css
@@ -77,7 +77,7 @@ button i{padding-left:8px}
 .navbar .nav > li > a,.navbar .nav > li > a:hover,.navbar .nav > li > #logged-in-user-name{color:#fff;font-size:18px;padding:9px 10px 11px}
 .navbar .nav > li > .brand{color:#d2d1d1}
 .username,.emphasize{color:#6eb6b5}
-.caution{color:#c12885}
+.logged-out{color:#c12885}
 .well button{width:60px}
 .well,.form-horizontal{margin:0}
 .group{float:left}
