--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -208,9 +208,6 @@ Override some Bootstrap defaults
 .modal
 	overflow visible
 
-.modal-backdrop, .modal-backdrop.fade.in
-	opacity 0.3
-
 /* @extends .modal */
 .modal-centered
 	width 600px
@@ -229,22 +226,20 @@ Override some Bootstrap defaults
 	margin -250px 0 0 -395px
 .modal-centered .reservation-entries
 	padding-left 14px
-
-.modal-body, .modal-header p
+.modal-centered .modal-body, .modal-centered .modal-header p
 	font-size 15px
-
-.modal-header
+.modal-centered .modal-header
 	position relative
-.modal-header .button-close
+.modal-centered .modal-header .button-close
 	position absolute
 	top -20px
 	right -20px
-.modal-header .confirmed-check
+.modal-centered .modal-header .confirmed-check
 	position absolute
 	left 50%
 	margin-left -22px
 	bottom -24px
-.modal-header h3
+.modal-centered .modal-header h3
 	text-transform uppercase
 	font-size 22px
 	font-weight normal
