separated styles between rachel stuff and old stuff

--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -396,12 +396,15 @@ button i
 /*  --------------------------------------------------
     :: Navbar
     -------------------------------------------------- */
-.navbar .divider-vertical
+.navbar.fat .divider-vertical
 	height 47px
 
+.navbar.fat .nav > li
+	padding-top 8px
+
 .navbar .nav > li > a, .navbar .nav > li > a:hover, .navbar .nav > li > #logged-in-user-name
-	color #FFF
-	font-size 18px
+	// color #FFF
+	// font-size 18px
 	padding 9px 10px 11px
 
 .navbar .nav > li > .brand
