--- a/app/public/css/modules.css
+++ b/app/public/css/modules.css
@@ -72,8 +72,9 @@ button i{padding-left:8px}
 #btn-about{top:1px;right:175px;width:40px;position:absolute}
 #btn-about i{padding-left:0}
 #btn-sign-in{top:1px;right:8px;width:160px;position:absolute}
-.navbar .divider-vertical{height:47px}
-.navbar .nav > li > a,.navbar .nav > li > a:hover,.navbar .nav > li > #logged-in-user-name{color:#fff;font-size:18px;padding:9px 10px 11px}
+.navbar.fat .divider-vertical{height:47px}
+.navbar.fat .nav > li{padding-top:8px}
+.navbar .nav > li > a,.navbar .nav > li > a:hover,.navbar .nav > li > #logged-in-user-name{padding:9px 10px 11px}
 .navbar .nav > li > .brand{color:#d2d1d1}
 .username,.emphasize{color:#6eb6b5}
 .logged-out{color:#c12885}
