made offerings page scrollable

--- a/app/public/css/modules.styl
+++ b/app/public/css/modules.styl
@@ -410,6 +410,13 @@ button i
 .navbar .nav > li > .brand
 	color #D2D1D1
 
+.navbar-fixed-top 
+	min-width 1024px
+
+@media (max-width: 979px)
+	.navbar-fixed-top
+		margin-bottom 0
+
 /*  --------------------------------------------------
     :: Misc
     -------------------------------------------------- */
