--- a/app/public/css/layout.css
+++ b/app/public/css/layout.css
@@ -9,6 +9,8 @@
 .l-horizontal > li:first-child{margin-left:0}
 hr.tight{margin:18px 0 0}
 .page-container{position:fixed;background:#eee;top:40px;bottom:20px;width:100%}
-.page-container .heading{color:#808080;text-shadow:-1px 1px 0 #fff;-moz-text-shadow:-1px 1px 0 #fff;-webkit-text-shadow:-1px 1px 0 #fff;font-size:1.4em;padding:20px 0 0 0}
+.page-container-cleared{background:#eee;width:100%;height:100%;padding-top:40px;min-width:1024px;padding-bottom:20px}
+@media (max-width: 979px){.page-container-cleared{padding-top:0}
+}.page-container .heading,.page-container-cleared .heading{color:#808080;text-shadow:-1px 1px 0 #fff;-moz-text-shadow:-1px 1px 0 #fff;-webkit-text-shadow:-1px 1px 0 #fff;font-size:1.4em;padding:20px 0 0 0}
 .center-container{width:940px;height:100%;margin:auto;text-align:center;padding:0 20px 0 20px}
 .footer{position:fixed;height:20px;bottom:0;width:100%;background:#222}
