--- a/app/public/css/layout.styl
+++ b/app/public/css/layout.styl
@@ -72,7 +72,19 @@ hr.tight
 	bottom footer_height
 	width 100%
 
-.page-container .heading
+.page-container-cleared
+	background #EEE
+	width 100%
+	height 100%
+	padding-top 40px
+	min-width 1024px
+	padding-bottom 20px
+
+@media (max-width: 979px)
+	.page-container-cleared
+		padding-top 0
+
+.page-container .heading, .page-container-cleared .heading
 	raiseText()
 	font-size 1.4em
 	padding 20px 0 0 0
