--- a/app/public/css/modules.css
+++ b/app/public/css/modules.css
@@ -76,7 +76,9 @@ button i{padding-left:8px}
 .navbar.fat .nav > li{padding-top:8px}
 .navbar .nav > li > a,.navbar .nav > li > a:hover,.navbar .nav > li > #logged-in-user-name{padding:9px 10px 11px}
 .navbar .nav > li > .brand{color:#d2d1d1}
-.username,.emphasize{color:#6eb6b5}
+.navbar-fixed-top{min-width:1024px}
+@media (max-width: 979px){.navbar-fixed-top{margin-bottom:0}
+}.username,.emphasize{color:#6eb6b5}
 .logged-out{color:#c12885}
 .well button{width:60px}
 .well,.form-horizontal{margin:0}
