--- a/app/server/views/home/offerings.jade
+++ b/app/server/views/home/offerings.jade
@@ -4,7 +4,7 @@ script
 	var OUR_SERVICES =!{JSON.stringify(our_services)}
 include header
 
-#inventory.page-container
+#inventory.page-container-cleared.clearfix
 	#all-services
 		.heading All Services
 		hr
