--- a/app/public/css/pages.css
+++ b/app/public/css/pages.css
@@ -36,13 +36,12 @@
 #inventory #our-services .heading{padding-left:20px}
 #inventory .service{width:100px;height:140px;margin:auto;margin-bottom:10px;padding:10px 20px 6px 20px;color:#777;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;border:1px solid #ddd;background-color:#fff;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}
 #inventory .service hr{margin:5px 0 3px 0}
-#inventory .service .icon{width:100%;cursor:pointer}
+#inventory .service .icon{width:100%;height:125px;text-align:center;line-height:105px;cursor:pointer}
 #inventory #all-services .service .text{text-align:center}
 #inventory #our-services .service{position:relative;float:left;width:180px;margin-left:10px}
 #inventory #our-services .service .edit{width:28px;height:28px;cursor:pointer;position:absolute;top:-10px;right:-10px;background:url("/img/icons/edit.png")}
 #inventory #our-services .service .text{float:left;text-align:left}
 #inventory #our-services .service .avail{text-align:right}
-#inventory #our-services .service img{margin-left:40px}
 #inventory #our-services .services{overflow:hidden;padding-top:18px}
 #inventory #our-services #edit-avail{display:none}
 #inventory #our-services #edit-avail .del,.add{position:absolute;top:34px;width:90px;height:110px;opacity:0;cursor:pointer;background-color:#333}
