fixed up list view

--- a/app/public/css/pages.styl
+++ b/app/public/css/pages.styl
@@ -46,12 +46,13 @@ Page styles are specific to certain areas of the site. For instance if you want 
 #dashboard .service hr
 	margin 5px 0 3px 0
 #dashboard .img
-	width 160px
-	height 100px
-	margin-left 40px
+	width 100%
+	height 120px
 	border-radius 5px
 	-moz-border-radius 5px
 	-webkit-border-radius 5px
+	text-align center
+	line-height 100px
 
 // account login //
 
