--- a/app/server/views/list.jade
+++ b/app/server/views/list.jade
@@ -27,7 +27,7 @@ div.navbar.navbar-fixed-top
 							.avail #{c.avail} / #{c.total}
 						hr
 						.img
-							img(src='/img/icons/'+c.name+'.png')
+							img(src='/img/icons/latest/icon-'+c.name+'-general.png')
 		hr
 
 include modals/about
