--- a/app/public/css/pages.css
+++ b/app/public/css/pages.css
@@ -14,7 +14,7 @@
 #dashboard .service .text .name{float:left}
 #dashboard .service .text .avail{text-align:right}
 #dashboard .service hr{margin:5px 0 3px 0}
-#dashboard .img{width:160px;height:100px;margin-left:40px;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}
+#dashboard .img{width:100%;height:120px;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;text-align:center;line-height:100px}
 #login-container{width:340px;margin:160px auto;}
 #login-container label{margin:15px 0 5px 5px}
 #login-container button{width:150px;padding:6px 40px 6px 40px;float:left;margin-top:15px}
