--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -1,16 +1,4 @@
-div.navbar.navbar-fixed-top.fat
-	div.navbar-inner
-		div.container
-			a.brand(href="#")
-				img(src="../img/logo.png", alt="Bridge")
-			ul.nav
-				li.divider-vertical
-			ul.nav.pull-right
-				li
-					a Welcome, John Doe
-				li.divider-vertical
-				li
-					a Log Out
+include dashboard-header
 
 div.container
 	div.row
