client toggle login / logout working

--- a/app/public/css/base.styl
+++ b/app/public/css/base.styl
@@ -29,7 +29,7 @@ Examples of Base Styles:
 html, body 
 	margin: 0
 	padding: 0
-	user-select: none
+	// user-select: none
 
 body
 	background url("../img/bkgd/60degree_gray.png") #E7E7E7 repeat;
