--- a/app/public/css/mixins.styl
+++ b/app/public/css/mixins.styl
@@ -36,7 +36,7 @@ disableText()
 
 drawContainer()
 	color #777
-	disableText()
+	// disableText()
 	border 1px solid #ddd
 	background-color white
 	border-radius 5px
