--- a/app/public/css/modules.css
+++ b/app/public/css/modules.css
@@ -68,17 +68,17 @@ button i{padding-left:8px}
 .button-modal{min-width:200px;height:33px;font-size:20px;line-height:34px;letter-spacing:1px}
 .button-group > a{margin-left:20px}
 .button-group > a:first-child{margin:0}
-#btn-logout{width:100px}
-#btn-about{top:1px;right:175px;width:40px;position:absolute}
-#btn-about i{padding-left:0}
-#btn-sign-in{top:1px;right:8px;width:160px;position:absolute}
+.navbar button{width:100px}
 .navbar.fat .divider-vertical{height:47px}
 .navbar.fat .nav > li{padding-top:8px}
 .navbar .nav > li > a,.navbar .nav > li > a:hover,.navbar .nav > li > #logged-in-user-name{padding:9px 10px 11px}
 .navbar .nav > li > .brand{color:#d2d1d1}
 .navbar-fixed-top{min-width:1024px}
 @media (max-width: 979px){.navbar-fixed-top{margin-bottom:0}
-}.username,.emphasize{color:#6eb6b5}
+}.navbar.list #btn-about{top:1px;right:175px;width:40px;position:absolute}
+.navbar.list #btn-about i{padding-left:0}
+.navbar.list #btn-login{top:1px;right:8px;width:160px;position:absolute}
+.username,.emphasize{color:#6eb6b5}
 .logged-out{color:#c12885}
 .well button{width:60px}
 .well,.form-horizontal{margin:0}
