--- a/app/server/views/aux/print.jade
+++ b/app/server/views/aux/print.jade
@@ -85,4 +85,4 @@ div(style='margin:-18px 20px 0 20px')
 					td	#{clients[i].tuberculous}
 
 script(src='/vendor/jquery.min.js')
-script(src='/js/print.js')
+script(src='/js/aux/print.js')
