--- a/app/server/views/dashboard/dashboard-header.jade
+++ b/app/server/views/dashboard/dashboard-header.jade
@@ -1,13 +1,11 @@
+
 div.navbar.navbar-fixed-top.fat
 	div.navbar-inner
 		div.container
 			a.brand(href="#")
 				img(src="../img/logo.png", alt="Bridge")
-			ul.nav
-				li.divider-vertical
 			ul.nav.pull-right
 				li
-					a Welcome, John Doe
-				li.divider-vertical
-				li
-					a Log Out
+					button#btn-login.btn.btn-primary
+						i.icon-lock.icon-white
+						| Log In
