--- a/app/server/views/dashboard/modals/welcome.jade
+++ b/app/server/views/dashboard/modals/welcome.jade
@@ -3,5 +3,5 @@
 		a.button-close(data-dismiss='modal')
 			img(src="../img/icons/latest/icon-exit.png")
 		h3 Welcome, 
-			span.username John Doe!
+			span.username
 	.modal-body You are now logged in to the Bridge system and may begin browsing for services you would like to reserve.
