--- a/app/server/views/dashboard/select-services.jade
+++ b/app/server/views/dashboard/select-services.jade
@@ -102,6 +102,7 @@ a#btn-reservation-success.btn Success
 a#btn-service-selection.btn Services
 
 include modals/welcome
+include modals/goodbye
 include modals/timeout
 include modals/reservation-confirm
 include modals/reservation-success
@@ -111,5 +112,5 @@ script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
 script(src='/vendor/bootstrap-modal.js')
 script(src='/vendor/bootstrap-transition.js')
-script(src='/js/dashboard.js')
+script(src='/js/dashboard/select-services.js')
 script(src='/js/utils/globals.js')
