--- a/app/public/css/base.css
+++ b/app/public/css/base.css
@@ -1,4 +1,4 @@
-html,body{margin:0;padding:0;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
+html,body{margin:0;padding:0}
 body{background:url("../img/bkgd/60degree_gray.png") #e7e7e7 repeat;font-family:Arial,Helvetica,sans-serif}
 h2{font-size:21px;color:#6b6b6b;text-shadow:0 1px 1px #fff}
 a{cursor:pointer}
