--- a/app/server/views/aux/list.jade
+++ b/app/server/views/aux/list.jade
@@ -1,14 +1,14 @@
 
 - var capitalize = function(s){return s.replace(/\w\S*/g, function(txt){return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();});}
 
-div.navbar.navbar-fixed-top
+div.navbar.navbar-fixed-top.list
 	div.navbar-inner
 		div.container-fluid
 			.nav.pull-left
 				.brand San Francisco Bridge – Public Dashboard
 			button#btn-about.btn.btn-primary
 				i.icon-question-sign.icon-white
-			button#btn-sign-in.btn.btn-primary
+			button#btn-login.btn.btn-primary
 				i.icon-lock.icon-white
 				| Service Providers
 
@@ -30,11 +30,11 @@ div.navbar.navbar-fixed-top
 							img(src='/img/icons/latest/icon-'+c.name+'-general.png')
 		hr
 
-include modals/about
+include ../modals/about
 
 script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
 script(src='/vendor/bootstrap-modal.js')
 script(src='/vendor/bootstrap-transition.js')
-script(src='/js/dashboard.js')
+script(src='/js/aux/list.js')
 script(src='/js/utils/globals.js')
