--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -137,5 +137,5 @@ script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
 script(src='/vendor/bootstrap-modal.js')
 script(src='/vendor/bootstrap-transition.js')
-script(src='/js/dashboard.js')
+script(src='/js/dashboard/select-provider.js')
 script(src='/js/utils/globals.js')
