--- a/app/server/views/dashboard/select-provider.jade
+++ b/app/server/views/dashboard/select-provider.jade
@@ -133,9 +133,14 @@ div.container
 						li
 							a.button.button-reserve.button-reserve-fat.loud Reserve
 
+include modals/welcome
+include modals/goodbye
+include modals/timeout
+
 script(src='/socket.io/socket.io.js')
 script(src='/vendor/jquery.min.js')
 script(src='/vendor/bootstrap-modal.js')
 script(src='/vendor/bootstrap-transition.js')
+script(src='/js/dashboard/client-login.js')
 script(src='/js/dashboard/select-provider.js')
 script(src='/js/utils/globals.js')
